--- a/.github/workflows/wf_merge_main.yml
+++ b/.github/workflows/wf_merge_main.yml
@@ -22,5 +22,5 @@ jobs:
           git fetch
           git checkout test
           git pull
-          git merge --no-ff main -m "Auto-merge main back to test"
+          git merge --no-ff main -m "Auto-merge main back to test" --allow-unrelated-histories
           git push  
