--- a/.github/workflows/wf_merge_main.yml
+++ b/.github/workflows/wf_merge_main.yml
@@ -14,7 +14,7 @@ jobs:
     
     - name: Set Git config
       run: |
-          git config --local user.email "zeezababy97@gmail.com"
+          git config --local user.email "azeezat.a.lawal@gmail.com"
           git config --local user.name "D2"
     
     - name: Merge main back to test
